Fixed earlier issue of position fixed; for left column- items are now fixed and are visible on resizing the display. Will test on different displays now

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+/* ----------------------------------------- */
 /* Base Styles */
 body {
   font-family: Tahoma, Geneva, sans-serif;
@@ -12,7 +13,7 @@ body {
   color: #4E878C;
 }
 
-/* -------------- */
+/* ----------------------------------------- */
 /* Column Styles */
 .column-left {
   background-color: #262626;
@@ -24,10 +25,14 @@ body {
 }
 
 .fixed {
-  padding-left: 70px;
-  padding-top: 200px;
+  left: 2%;
+  position: fixed;
   text-transform: uppercase;
-  /* position: fixed; */
+  top: 20%;
+}
+
+.col-md-4 {
+  min-height: 700px;
 }
 
 .profile-image {
@@ -46,13 +51,13 @@ hr {
   padding-right: 5px;
 }
 
-/* ------- */
+/* ----------------------------------------- */
 /* Floats */
 .first-image {
   margin-right: 13px;
 }
 
-/* ---------------- */
+/* ----------------------------------------- */
 /* Right Box Styles */
 /* Box 1 */
 .box-1, .box-2, .box-3, .box-4{
